--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.2.2",
     "react-scripts": "3.4.3",
     "typescript": "^3.7.5"
   },
@@ -44,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-hash-link": "^1.2.1"
   }
 }
