--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
     "bootstrap": "^4.5.2",
+    "i": "^0.3.6",
+    "npm": "^6.14.8",
     "react": "^16.13.1",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.13.1",
