--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.13.1",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.9.2",
     "react-parallax": "^3.0.3",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
