--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.2.2",
     "react-scripts": "3.4.3",
+    "react-toastify": "^8.0.2",
     "typescript": "^3.7.5"
   },
   "scripts": {
